# Trackserver2

./: .gitignore  CLAUDE.md  Dockerfile  README.md  Trackserver2_Specification.md  ciView Maps.xml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/api/: client.js  websocket.js
dashboard/src/components/common/: DatePickerWithData.jsx
dashboard/src/components/devices/: DeviceList.jsx
dashboard/src/components/layout/: Layout.jsx
dashboard/src/components/map/: HistoryMap.jsx  LayerSwitcher.jsx  MapControls.jsx  TrackingMap.jsx  UserLocationMarker.jsx  mapLayers.js
dashboard/src/components/timeline/: TimelineBar.jsx
dashboard/src/pages/: DashboardPage.jsx  DevicesPage.jsx  HistoryPage.jsx  LoginPage.jsx  SettingsPage.jsx
dashboard/src/stores/: authStore.js  devicesStore.js
tools/: beacon_simulator.py  generate_route.py  generate_uk_route.py  import_csv_logs.py  init_db.py
trackserver2/: __init__.py  config.py  main.py
trackserver2/api/: __init__.py  main.py
trackserver2/models/: __init__.py  database.py  models.py
trackserver2/protocol/: __init__.py  blowfish.py  crc.py  message_parser.py  server.py
trackserver2/utils/: __init__.py
trackserver2/websocket/: __init__.py  server.py
